--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Age Calculator</title>
-    <link rel="stylesheet" href="./style.css"> 
-</head>
-<body>
-    <div class="container ">
-        <div class="calculator">
-            <h1>JavaScript <br> <Span>Age Calculator</Span></h1>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="calculator">
+        <h1>
+          JavaScript <br />
+          <span>Age Calculator</span>
+        </h1>
         <div class="input-box">
-            <input type="date" id="date" name="birthdate">
-            <button type="button" onclick="calculateAge()">Calculate</button>
+          <input type="date" id="date" name="birthdate" />
+          <button type="button" onclick="calculateAge()">Calculate</button>
         </div>
         <p id="result"></p>
-        </div>
+      </div>
     </div>
     <script src="./main.js" type="text/javascript"></script>
-</body>
+  </body>
 </html>
